[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jgai-utils"
version = "0.1.0"
description = "Common utilities for JieGou-AI python projects"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "LaoLin", email = "laolin@jiegouai.com" }
]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]